# mongodb-sizing-agent

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_agent.py
agent/: __init__.py  approval.py  continue_after_approval.py  events.py  prompts.py  session.py  tools_runner.py
automation/: __init__.py  modernization_pr.py
dashboard/: __init__.py  server.py  state.py
scripts/: __init__.py  apply_indexes.py  clear_local_mongo.py  index_utils.py  report_render.py  run_local_stack.sh  run_slack_bot.sh  size_from_dbstats.py  sizing_inputs.py  sql_index_parser.py
slack_app/: __init__.py  blocks.py  bot.py  manifest.yaml
templates/: data-model.template.md  intake.schema.json  sizing-report.template.md  sizing_inputs.schema.json
tests/: conftest.py  test_agent_smoke.py  test_apply_indexes_unit.py  test_approval_gate.py  test_approval_write.py  test_clear_local_mongo_unit.py  test_continue_after_approval.py  test_dashboard_state.py  test_e2e_approval_gate.py  test_e2e_cli.py  test_e2e_indexes.py  test_e2e_repository.py  test_e2e_seed.py  test_e2e_tools_pipeline.py  test_events_unit.py  test_intake_schema.py  test_modernization_pr.py  test_mongodb_indexes_schema.py  test_prompts.py  test_repo_contract.py  test_report_render.py  test_report_render_extended.py  test_run_agent_cli.py  test_seed_contract.py  test_session.py  test_session_wiring.py  test_sizing_formulas.py  test_sizing_inputs_helpers.py  test_sizing_inputs_schema.py  test_slack_blocks.py  test_slack_bot.py  test_sql_index_parser.py  (+2 more)
(+50 files in other folders)
